--- a/src/com/gamestore/interfaces/IncluirCliente.form
+++ b/src/com/gamestore/interfaces/IncluirCliente.form
@@ -141,8 +141,7 @@
                                           </Group>
                                           <Group type="102" alignment="1" attributes="0">
                                               <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
-                                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                                              <Component id="textRg" linkSize="5" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace min="-2" pref="176" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                   </Group>
@@ -154,7 +153,7 @@
                                       <EmptySpace min="-2" pref="98" max="-2" attributes="0"/>
                                       <Component id="jLabel16" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="comboSexo" linkSize="5" min="-2" pref="158" max="-2" attributes="0"/>
+                                      <Component id="comboSexo" min="-2" pref="158" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
@@ -182,6 +181,7 @@
                                   <Component id="textUf" min="-2" pref="72" max="-2" attributes="0"/>
                               </Group>
                               <Component id="botaoSalvar" linkSize="10" alignment="1" min="-2" pref="134" max="-2" attributes="0"/>
+                              <Component id="textRg" alignment="1" min="-2" pref="158" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Component id="jLabel28" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -209,7 +209,7 @@
                               </Group>
                               <Group type="103" groupAlignment="2" attributes="0">
                                   <Component id="jLabel16" alignment="2" min="-2" max="-2" attributes="0"/>
-                                  <Component id="comboSexo" linkSize="6" alignment="2" min="-2" max="-2" attributes="0"/>
+                                  <Component id="comboSexo" alignment="2" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
@@ -222,7 +222,7 @@
                               <Component id="jLabel3" alignment="2" min="-2" max="-2" attributes="0"/>
                               <Component id="textCpf" linkSize="4" alignment="2" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel7" alignment="2" min="-2" max="-2" attributes="0"/>
-                              <Component id="textRg" linkSize="6" alignment="2" min="-2" max="-2" attributes="0"/>
+                              <Component id="textRg" alignment="2" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="2" attributes="0">
@@ -655,13 +655,6 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JFormattedTextField" name="textRg">
-          <Properties>
-            <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
-              <Format format="##.###.###-A" subtype="-1" type="5"/>
-            </Property>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JFormattedTextField" name="textNascimento">
           <Properties>
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
@@ -728,6 +721,8 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoCancelarActionPerformed"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JTextField" name="textRg">
         </Component>
       </SubComponents>
     </Container>
