--- a/src/com/gamestore/interfaces/IncluirProduto.form
+++ b/src/com/gamestore/interfaces/IncluirProduto.form
@@ -436,14 +436,11 @@
               <Font name="Calibri Light" size="14" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
-                <StringItem index="0" value="Console"/>
-                <StringItem index="1" value="Jogo"/>
-                <StringItem index="2" value="Acess&#xf3;rio"/>
-              </StringArray>
+              <StringArray count="0"/>
             </Property>
           </Properties>
           <AuxValues>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JComboBox(Categoria.getDescricoes())"/>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
